--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
-<title>Home - BossAPI</title>
-<h1>
-  The new website builder online
-</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<!-- HTML Codes by Quackit.com -->
+<title>
+The www.wildfarm.tk api.</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="keywords" content="home">
+<meta name="description" content="This is for developers and admins of the wildfarm staff team">
+<style>
+body {background-color:#918888;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
+h3{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
+p {text-align:center;font-family:Cursive;font-size:22px;font-style:normal;font-weight:bold;color:#000000;background-color:#ffffff;}
+</style>
+</head>
+<body>
+<h3>Welcome</h3>
+<p>This is a website for images and files for wildfarm community.</p>
+</body>
+</html>
