--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ The www.wildfarm.tk api.</title>
 <meta name="keywords" content="home">
 <meta name="description" content="This is for developers and admins of the wildfarm staff team">
 <style>
-body {background-color:#918888;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
+body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
 h3{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
 p {text-align:center;font-family:Cursive;font-size:22px;font-style:normal;font-weight:bold;color:#000000;background-color:#ffffff;}
 </style>
